js/src/tests/test262/built-ins/NativeErrors/SyntaxError/instance-proto.js
assert
.
sameValue
(
Object
.
getPrototypeOf
(
new
SyntaxError
)
SyntaxError
.
prototype
)
;
reportCompare
(
0
0
)
;
